@@ -231,6 +231,7 @@
         <string id="33331">IPHONE-directory not found or writeable !</string> 
         <string id="33332">PSP-directory not found or writeable !</string>
         <string id="33333">Default mkv needs bluray-functions</string> 
+        <string id="33334">Copy-Protection detected. Process anyway ?</string> 
 
         # Warning : do not modify this id !!!!   
 
